tests/ui/missing_response_type.stderr
error: Missing response type in @response annotation
       help: format is '@response <code> <type> <description>'
       note: did you forget to add the type? For example:
       note:   '@response 204 () Todo item deleted successfully.'
       note: common types: () for empty responses, Json<T> for JSON, (StatusCode, Json<T>) for custom status
 --> tests/ui/missing_response_type.rs:8:1
  |
8 | /// @response 204 Todo item deleted successfully.
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
